# aas-test-engines

./: .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: check.yml  publish.yml
aas_test_engines/: __init__.py  __main__.py  _generate.py  _util.py  api.py  config.py  data_types.py  exception.py  file.py  http.py  opc.py  reflect.py  result.py
aas_test_engines/_api/: generate.py  graph.py  openapi.py  parse_util.py  run.py  runtime_expression.py
aas_test_engines/_file/: generate.py
aas_test_engines/data/: template.html
aas_test_engines/data/api/: 3.0.yml
aas_test_engines/data/api/samples/: asset_info.json  operation_request.json  shell_descriptor.json  submodel.json
aas_test_engines/data/file/: 3.0.yml
aas_test_engines/test_cases/v3_0/: __init__.py  adapter.py  api.py  api.yml  data_types.py  generate.py  model.py  parse.py  parse_submodel.py  submodel_templates.py
aas_test_tools/: __main__.py  api.py  data_types.py  file.py  result.py
aas_test_tools/_api/: generate.py  openapi.py  resolver.py  run.py  runconf.py
aas_test_tools/data/: 3.0.0.yml
aas_test_tools/data/api/: 1.0.0RC01.yml  1.0RC01.yml  1.0RC03.yml
aas_test_tools/data/file/: 3.0.0.yml
doc/: api.md  file.md
test/: test_api.py  test_cli.py  test_config.py  test_data_types.py  test_file.py  test_opc.py  test_reflect.py  test_result.py  test_util.py
test/acceptance/: file.py  generate.py  server.py
test/fixtures/submodel_templates/: contact_information.json  digital_nameplate.json
test/v3_0/: test_model.py
(+37 files in other folders)
