[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aas_test_engines"
version = "0.2"
description = "Official test tooling for the Asset Administration Shell"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["asset administration shell", "aas", "test"]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/admin-shell-io/aas-test-engines"

[project.scripts]
realpython = "reader.__main__:main"

[tool.setuptools.package-data]
"*" = ["*.yml"]
